--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -16,8 +16,8 @@
 \usepackage{amssymb, graphicx, fancyheadings}
 \usepackage{graphicx}
 \usepackage{listings}
- \usepackage{float}
- 	\usepackage{amsmath,environ}
+\usepackage{float}
+\usepackage{amsmath,environ}
 % Ursäkta lite bloat men det behövs för att få highlighting på GLSL
 \lstdefinelanguage{GLSL}
 {
@@ -200,7 +200,9 @@ Marcus Nygren}
 
 	%Skapa sammanfattning
 	\begin{abstract}
-	I den här rapporten presenteras en Eulerisk implementation av Navier-Stokes ekvationer för att simulera rök, och i förlängningen även andra fluider. Beräkningarna görs i 3D på datorns GPU, medan representationen är i 2D. Rapporten kan användas som stöd inför utförandet av en egen fluidsimulering, eller som en detaljerad praktisk redogörelse för Navier-Stokes ekvationer.
+		I den här rapporten presenteras en Eulerisk implementation av Navier-Stokes ekvationer för att simulera rök, och i förlängningen även andra fluider. Beräkningarna görs i 3D på datorns GPU, medan representationen sker i 2D. 
+		
+		Rapporten kan användas som ett stöd inför utförandet av en egen fluidsimulering, eller som en praktisk redogörelse för Navier-Stokes ekvationer.
 	\end{abstract}
 	
 	% skapar innehållsförteckning.
@@ -780,7 +782,7 @@ void main()
 	\Section{Resultat}
 		\emph{Projektets resultat. Om man följer hela workflowen i metod-delen vart hamnar man då? Vad kom vi fram till?}
 		
-		TEXT..
+		Projektet Elements är en mjukvara skapad för att 
 
 	\Section{Slutord}
 		
