--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -230,9 +230,14 @@ Marcus Nygren}
 
 		Navier-Stokes ekvation, ekvation $ \ref{eq:Navier-Stokes} $, och sambandet om konserverandet av massa, ekvation $ \ref{eq:Konservering av massa} $, refereras i allmänhet till Navier-Stokes ekvationer. Dessa modellerar tillsammans en fluid genom att se på fluiden som en kontinuerlig substans, det vill säga att istället för att enskilda molekyler studeras så studers små volymelement av fluiden som kan innehålla flera molekyler. Ekvationerna i sig bygger på konservering av massa, rörelsemängd och energi och härstammar från ett antal volym- och yt-integraler över en godtycklig volym, se stycket om konservering av energi under sektion 2.2 som beskriver Reynolds Transport Theorem (RTT), ekvation $ \ref{eq:Reynolds transportteorem} $.
 		
-		I följande ekvationer är $ \bold u $ hastigheten $ \bold u(x,y,z,t) $, det vill säga hastigheten i x-, y och z-led samt ett indirekt beroende av tiden t.
-
-
+		I följande ekvationer är $ \bold u $ hastigheten 	\begin{center}
+			    $ \bold u(x,y,z,t) = \begin{pmatrix}
+				x'(t) \\ 
+				y'(t) \\ 
+				z'(t)
+				\end{pmatrix} $, 
+			\end{center} där $ \bold u $ indirekt beror på tiden $ t $. Variabeln $ p $ är medelvärdet av det normala trycket i $ x $-, $ y $- och $ z $-led över ett volymelement, $ \bold \Gamma $ är en generell deriverbar spänningstensor och variabeln $ \bold f $ står för yttre påverkande krafter.
+	
 	\begin{center}
 		\begin{equation}\label{eq:Navier-Stokes}
 			\bold \varrho \left ( \frac{\partial }{\partial t} \bold u + \bold u \cdot \nabla \bold u \right ) 
@@ -248,7 +253,7 @@ Marcus Nygren}
 
 			
 	\Subsection{Konservering av energi}
-		 RTT är en balansekvation som säger att förändringen av en fysisk egenskap $ \psi  $ (antingen skalär- eller vektor-baserad) definerad på volymen $ \Omega $ måste vara lika med vad som är förändrat genom randen till $ \Omega $ plus vad som är förändrat inuti $ \Omega $ genom eventuella källor och sänkor $ \chi $. Detta i enlighet med ekvation $ \ref{eq:Reynolds transportteorem} $ och kan tolkas som ett sätt att bevara energi.
+		 RTT är en balansekvation som säger att förändringen av en fysisk egenskap $ \psi  $ (antingen skalär- eller vektor-baserad) definerad på volymen $ \Omega $ ska vara lika med skillnaden mellan vad som är förändrat genom randen till $ \Omega $ och vad som är förändrat inuti $ \Omega $ genom eventuella källor och sänkor $ \chi $. Detta i enlighet med ekvation $ \ref{eq:Reynolds transportteorem} $ och kan tolkas som ett sätt att bevara energi.
 	
 	\NewEnviron{Reynolds transportteorem}{%
 	\begin{equation}\label{eq:Reynolds transportteorem}\begin{split}
@@ -258,31 +263,31 @@ Marcus Nygren}
 	}
 
 	\begin{Reynolds transportteorem}
-		\frac{\partial }{\partial t}\int_{\Omega}^{ } \psi\ \mathrm{d}V  
-			+ \int_{\partial\Omega}^{ } \psi \bold u \cdot \bold n \ \mathrm{d}A 
-			+ \int_{\Omega}^{ } \chi \ \mathrm{d}V
-			= 
-			0 
-		\ \ \Leftrightarrow \\ \\
+	%	\frac{\partial }{\partial t}\int_{\Omega}^{ } \psi\ \mathrm{d}V  
+	%		+ \int_{\partial\Omega}^{ } \psi \bold u \cdot \bold n \ \mathrm{d}A 
+	%		- \int_{\Omega}^{ } \chi \ \mathrm{d}V
+	%		= 
+	%		0 
+	%	\ \ \Leftrightarrow \\ \\
 		\frac{\partial }{\partial t}\int_{\Omega}^{ } \psi\ \mathrm{d}V 
 				= 
+			    \int_{\Omega}^{ } \chi \ \mathrm{d}V	
 				- \int_{\partial\Omega}^{ } \psi \bold u \cdot \bold n \ \mathrm{d}A 
-				- \int_{\Omega}^{ } \chi \ \mathrm{d}V	
 		\ \ \Leftrightarrow \\ \\
 		\frac{\partial }{\partial t}\int_{\Omega}^{ } \psi\ \mathrm{d}V 
-				= 
+				=
+				 \int_{\Omega}^{ } \chi   \ \mathrm{d} V
 				- \int_{\Omega}^{ } \nabla \cdot \left (  \psi \bold u \right ) \mathrm{d}V
-				- \int_{\Omega}^{ } \chi   \ \mathrm{d} V
 		\ \ \Leftrightarrow \\ \\		
 		\int_{\Omega}^{ } \frac{\partial }{\partial t} \psi\ \mathrm{d}V
 				+ \int_{\Omega}^{ } \nabla \cdot \left (  \psi \bold u \right ) \mathrm{d}V
-				+ \int_{\Omega}^{ } \chi   \ \mathrm{d} V
+				- \int_{\Omega}^{ } \chi   \ \mathrm{d} V
 				=
 				0
 		\ \ \Leftrightarrow \\ \\
 		\int_{\Omega}^{ } \left ( \frac{  \partial }{\partial t} \psi\ 
 				+ \nabla \cdot \left (  \psi \bold u \right ) 
-				+ \chi  \right ) \mathrm{d}V
+				- \chi  \right ) \mathrm{d}V
 				= 
 				0	\ \ 	\ \ 	\ \ 	
 	\end{Reynolds transportteorem}
@@ -339,7 +344,7 @@ Marcus Nygren}
 		\begin{equation}\label{eq:Leibniz-Reynolds transportteorem 2}
 			\frac{  \partial }{\partial t} \psi\ 
 			+ \nabla \cdot \left (  \psi \bold u \right ) 
-			+ \chi 
+			- \chi 
 			= 
 			0
 		\end{equation}
@@ -368,13 +373,13 @@ Marcus Nygren}
 		\begin{equation}\label{eq:Konservering av rörelsemängd}
 			\frac{  \partial }{\partial t} \varrho \bold u \ 
 			+ \nabla \cdot \left ( \varrho \bold u  \bold u \right ) 
-			+ \chi 
+			- \chi 
 			= 
 			0
 		\end{equation}
 	\end{center}
 	
-	Utveckling av ekvation $ \ref{eq:Konservering av rörelsemängd} $ ger ekvation $ \ref{eq:Konservering av rörelsemängd 2} $, där $ \bold b $ representerar en källa eller sänka. 
+	Utveckling av ekvation $ \ref{eq:Konservering av rörelsemängd} $ ger ekvation $ \ref{eq:Konservering av rörelsemängd 2} $, där $ \chi $ representerar en källa eller sänka. 
 	
 	\begin{center}
 		\begin{equation}\label{eq:Konservering av rörelsemängd 2}
@@ -383,7 +388,7 @@ Marcus Nygren}
 			+ \bold u  \bold u \  \cdot \nabla \varrho
 			+ \varrho \bold u \cdot \nabla \bold u
 			+ \varrho \bold u \nabla \cdot \bold u
-			= \bold b
+			= \chi
 		\end{equation}
 	\end{center}
 		
@@ -394,7 +399,7 @@ Marcus Nygren}
 			\bold u \left ( \frac{  \partial }{\partial t} \varrho + \bold u \cdot \nabla \varrho + \varrho \nabla \cdot \bold u \right ) 
 			+ \varrho \left ( \frac{  \partial }{\partial t} \bold u 
 			+ \bold u \cdot \nabla \bold u \right )
-			= \bold b
+			= \chi
 		\end{equation}
 	\end{center}
 	
@@ -406,11 +411,11 @@ Marcus Nygren}
 		\begin{equation}\label{eq:Konservering av rörelsemängd 4}
 			 \varrho \left ( \frac{  \partial }{\partial t} \bold u 
 			+ \bold u \cdot \nabla \bold u \right )
-			= \bold b
+			= \chi
 		\end{equation}
 	\end{center}
 	
-	En anekdot är att utveckling av ekvation $ \ref{eq:Konservering av rörelsemängd 4} $ ger ett samband som kan knytas till Newtons andra lag, $ \bold F = m \bold a $, se ekvation  $ \ref{eq:Konservering av rörelsemängd 6} $, där $ \varrho $ representerar massan $ m $, $ \bold b $ yttre krafter $ \bold F $ och där materialderivatan för $ \bold u $ representerar accelerationen $ \bold a $. 
+	En anekdot är att utveckling av ekvation $ \ref{eq:Konservering av rörelsemängd 4} $ ger ett samband som kan knytas till Newtons andra lag, $ \bold F = m \bold a $, se ekvation  $ \ref{eq:Konservering av rörelsemängd 6} $, där $ \varrho $ representerar massan $ m $, $ \chi $ yttre krafter $ \bold F $ och där materialderivatan för $ \bold u $ representerar accelerationen $ \bold a $. 
 
 	\NewEnviron{Konservering av rörelsemängd 6}{%
 	\begin{equation}\label{eq:Konservering av rörelsemängd 6}\begin{split}
@@ -426,13 +431,13 @@ Marcus Nygren}
 			+  u _{z} \frac{\partial u _{z}} {\partial z} 
 			\right )
 			=
-			\bold b
+			\chi
 		\ \ \Leftrightarrow \\ \\
 			\varrho \
 			\frac{\mathrm{d} }{\mathrm{d} t} 
 			\bold u(x,y,z,t)
 			=
-			\bold b \ \ \ \ \ \
+			\chi \ \ \ \ \ \
 	\end{Konservering av rörelsemängd 6}
 	
 	
@@ -446,7 +451,7 @@ Marcus Nygren}
 			+  u _{z} \frac{\partial u _{z}} {\partial z} 
 			\right )
 			=
-			\bold b
+			\chi
 		\end{equation}
 	\end{center}
 
@@ -456,13 +461,13 @@ Marcus Nygren}
 			\frac{\partial }{\partial t} 
 			\bold u(x,y,z,t)
 			=
-			\bold b
+			\chi
 		\end{equation}
 	\end{center}
 	
 	\fi
 	
-	Genom att studera en voxel i en fluid fås att kraften $ \bold b $ kan delas upp i två termer enligt $ \bold b =   \nabla \cdot \sigma + \bold f $, där $ \nabla \cdot \sigma $ härstammar från tryck och där $ \bold f $ härstammar från yttre krafter. Cauchys spänningstensor $ \sigma $ kan förenklas till $ \sigma = -pI +  \bold \Gamma \ $, där $ p $ är minus medelvärdet av det normala trycket i $ x $-, $ y $- och $ z $-led, $ I $ är identitetsmatrisen och där $ \bold \Gamma $ är en deriverbar spänningstensor som brukligt kallas för viskositetstermen. För en fluid i vila är exempelvis $ \bold \Gamma = 0 $. Detta resulterar i ekvation $ \ref{eq:Konservering av rörelsemängd 9} $ som är Navier-Stokes generella ekvation.
+	Genom att studera en voxel i en fluid fås att kraften $ \chi $ kan delas upp i två termer enligt $ \chi =   \nabla \cdot \sigma + \bold f $, där $ \nabla \cdot \sigma $ härstammar från tryck och där $ \bold f $ härstammar från yttre krafter. Cauchys spänningstensor $ \sigma $ kan förenklas till $ \sigma = -pI +  \bold \Gamma \ $, där $ p $ är medelvärdet av det normala trycket i $ x $-, $ y $- och $ z $-led, $ I $ är identitetsmatrisen och där $ \bold \Gamma $ är en deriverbar spänningstensor som brukligt kallas för viskositetstermen. För en fluid i vila är exempelvis $ \bold \Gamma = 0 $. Detta resulterar i ekvation $ \ref{eq:Konservering av rörelsemängd 9} $ som är Navier-Stokes generella ekvation.
 	
 	\NewEnviron{Konservering av rörelsemängd 9}{%
 	\begin{equation}\label{eq:Konservering av rörelsemängd 9}\begin{split}
@@ -560,7 +565,7 @@ För implementation av Navier-Stokes ekvationerna förenklas 				systemet 	från ek
 		\end{equation}
 	\end{center}
 	
-	I ekvation $ \ref{eq:Poissons ekvation} $ står $\bold w$ för hastigheten som hittills räknats ut av dem tidigare komponenterna i ekvationen. Poissons ekvation kan skrivas om till matrisform, $ \bold A \bold x = \bold b $, där $\bold A $ byggs av Laplaceoperatorn, $ \bold b $ är konstanter från $ \bold w $ och $ \bold x $ är den sökta vektorn. Metoden som används för att lösa systemet är Jacobis iterativa metod. Metoden går ut på att först initiera en gissning på en lösning av systemet och sedan iterera fram en förbättrad lösning. Processen är iterativ tills lösningen konvergerar. Det finns olika numeriska metoder till att lösa Poissons ekvation, men tack vare Jacobis enkla struktur utförs beräkningarna snabbt på GPU:n, även om metoden konvergerar långsammare än andra metoder.
+	I ekvation $ \ref{eq:Poissons ekvation} $ står $\bold w$ för hastigheten som hittills räknats ut av dem tidigare komponenterna i ekvationen. Poissons ekvation kan skrivas om till matrisform, $ \bold A \bold x = Q $, där $\bold A $ byggs av Laplaceoperatorn, $ Q $ är konstanter från $ \bold w $ och $ \bold x $ är den sökta vektorn. Metoden som används för att lösa systemet är Jacobis iterativa metod. Metoden går ut på att först initiera en gissning på en lösning av systemet och sedan iterera fram en förbättrad lösning. Processen är iterativ tills lösningen konvergerar. Det finns olika numeriska metoder till att lösa Poissons ekvation, men tack vare Jacobis enkla struktur utförs beräkningarna snabbt på GPU:n, även om metoden konvergerar långsammare än andra metoder.
 	
 	För en fullständig lösning på Poissons ekvation krävs hantering av tryck -och hastighets-problem som uppstår vid randen. Hastigheten i randens riktning sätts till 0. För trycket används Neumanns randvillkor, på så sätt att $ \frac{\partial p}{\partial t} = 0 $. 
 
