--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -768,7 +768,7 @@ void main()
 	
 	\begin{figure}[H]
     	\centering
-    	\includegraphics[width=\linewidth]{report_images/ny_resultat.png}
+    	\includegraphics[width=\linewidth]{report_images/Simulering1.png}
     	\caption{\emph{Resultat av simuleringen.}}
    		\label{fig:resultat}
 	\end{figure}
@@ -782,12 +782,19 @@ void main()
 
 		Med det sagt lämpar sig Qt fortfarande väl för tunga C++-applikationer som gynnas av användargränssnitt, men kraven på hur man utformar programvaran blir mycket högre och en kalkylerad avvägning rekommenderas. För utvecklingsteamet var det uppskattat att lära sig både Qt och GLFW under en och samma projekt. Det har dock fått följden att gruppen inte kommit så långt som visionen varit i något av systemen. 
 		
-		Den inledande idéen var att ha flera olika fluider, större användarkontroll, 3D-representation samt fler externa krafter representerade och dess värden modifierbara. Resultatet bedöms ändå som framgångsrikt, då de kunskapsmässiga målen för kursen överträffats. Att göra applikationen GPU-baserad visade sig vara ett effektivt val. Simuleringen kör i realtid, så det går att interagera med den via piltangenterna, vilket inte hade varit möjligt annars. 
+		Den inledande idéen var att ha flera olika fluider, större användarkontroll, 3D-representation samt fler externa krafter representerade och dess värden modifierbara. Resultatet bedöms ändå som framgångsrikt, då de kunskapsmässiga målen för kursen överträffats och vi är nöjda med vår representation. Att göra applikationen GPU-baserad visade sig vara ett effektivt val. Simuleringen kör i realtid, så det går att interagera med den via piltangenterna, vilket inte hade varit möjligt annars. 
 
 	\Section{Resultat}
 		\emph{Projektets resultat. Om man följer hela workflowen i metod-delen vart hamnar man då? Vad kom vi fram till?}
 		
-		Elements är en GPU-baserad mjukvara skapad för visualisera Navier-Stokes ekvationer med exempelvis en röksimulering. 
+		\begin{figure}[H]
+    	\centering
+    	\includegraphics[width=\linewidth]{report_images/Simulering2.png}
+    	\caption{\emph{Resultat av simuleringen.}}
+   		\label{fig:resultat}
+	\end{figure}
+	
+		Projektet Elements är en mjukvara skapad för att 
 
 	\Section{Slutord}
 		
