--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -768,7 +768,7 @@ void main()
 	
 	\begin{figure}[H]
     	\centering
-    	\includegraphics[width=\linewidth]{report_images/Simulering1.png}
+    	\includegraphics[width=\linewidth]{report_images/Simulering3.png}
     	\caption{\emph{Resultat av simuleringen.}}
    		\label{fig:resultat}
 	\end{figure}
@@ -785,16 +785,20 @@ void main()
 		Den inledande idéen var att ha flera olika fluider, större användarkontroll, 3D-representation samt fler externa krafter representerade och dess värden modifierbara. Resultatet bedöms ändå som framgångsrikt, då de kunskapsmässiga målen för kursen överträffats och vi är nöjda med vår representation. Att göra applikationen GPU-baserad visade sig vara ett effektivt val. Simuleringen kör i realtid, så det går att interagera med den via piltangenterna, vilket inte hade varit möjligt annars. 
 
 	\Section{Resultat}
-		\emph{Projektets resultat. Om man följer hela workflowen i metod-delen vart hamnar man då? Vad kom vi fram till?}
+		\emph{Beskriv vad det är vi ser i denna bild och den förra bilden.}
 		
 		\begin{figure}[H]
     	\centering
     	\includegraphics[width=\linewidth]{report_images/Simulering2.png}
-    	\caption{\emph{Resultat av simuleringen.}}
-   		\label{fig:resultat}
+    	\caption{\emph{Resultat av simuleringen, efter att användaren har förflyttat en av punktkällorna med hjälp av piltangenterna.}}
+   		\label{fig:resultat2}
 	\end{figure}
 	
-		Projektet Elements är en mjukvara skapad för att 
+		Resultatet ses i figur ~\ref{fig:resultat} och ~\ref{fig:resultat}. I ~\ref{fig:resultat} ses simuleringen 
+		
+		är en applikation där tre punktkällor är placerade jämte varandra, simulerade med olika desitet. Temperaturen ökar med tiden, vilket innebär att den punktkälla där röken har högst densitet stiger snabbast, se .
+		
+		 genererar rök jämte varandra, med olika densitet men samma temperatur. Efter en tid
 
 	\Section{Slutord}
 		
