--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -762,17 +762,6 @@ void main()
 
 
 	Den ovan nämnda metoden för att visualisera innehållet i en 3D-textur användes för att den är mycket lätt att implementera, dock går en stor del av meningen med att utföra simuleringen i tre dimensioner förlorad. Ett mer tilltalande alternativ hade varit att visualisera hela volymen i tre dimensioner med hjälp av volymrendering. Detta hade dock krävt betydligt mer implementation, vilket var utanför denna kurs ramar.
-		
-
-		I figur~\ref{fig:resultat} visas resultatet av att rendera ett lager av 3D-texturen som innehåller densitetens utbredning. De olika punktkällorna har olika densitet, där röken efter en tid breder ut sig och krockar med de cirkulära objekten. Implementationen tillåter en användare att styra den mittersta punktkällan.
-	
-	\begin{figure}[H]
-    	\centering
-    	\includegraphics[width=\linewidth]{report_images/Simulering3.png}
-    	\caption{\emph{Resultat av simuleringen.}}
-   		\label{fig:resultat}
-	\end{figure}
-	
 	
 	\Section{Diskussion}
 		
@@ -787,18 +776,21 @@ void main()
 	\Section{Resultat}
 		\emph{Beskriv vad det är vi ser i denna bild och den förra bilden.}
 		
+		I figur~\ref{fig:resultat} visas resultatet av att rendera ett lager av 3D-texturen som innehåller densitetens utbredning. De tre  rökkällorna har olika densitet, där röken efter en tid breder ut sig och krockar med de cirkulära objekten. En värmekälla är placerad vid samma position som rökkällan i mitten i figur ~\ref{fig:resultat}. Detta kan ses i figuren genom att observera hur röken på den vänsta och högra sidan rör sig i motsatt riktning till värmekällan. Implementationen tillåter en användare att styra den mittersta källan via piltangenterna, se exempel i figur ~\ref{fig:resultat2}. Vissa tangenter är även bindna till att ändra värden hos parametrarna, exempelvis temperatur, som i detta fall är inställda enligt ~\ref{tbl:konstanter}.
+	
+	\begin{figure}[H]
+    	\centering
+    	\includegraphics[width=\linewidth]{report_images/Simulering3.png}
+    	\caption{\emph{Resultat av simuleringen.}}
+   		\label{fig:resultat}
+	\end{figure}		
+		
 		\begin{figure}[H]
     	\centering
     	\includegraphics[width=\linewidth]{report_images/Simulering2.png}
     	\caption{\emph{Resultat av simuleringen, efter att användaren har förflyttat en av punktkällorna med hjälp av piltangenterna.}}
    		\label{fig:resultat2}
 	\end{figure}
-	
-		Resultatet ses i figur ~\ref{fig:resultat} och ~\ref{fig:resultat}. I ~\ref{fig:resultat} ses simuleringen 
-		
-		är en applikation där tre punktkällor är placerade jämte varandra, simulerade med olika desitet. Temperaturen ökar med tiden, vilket innebär att den punktkälla där röken har högst densitet stiger snabbast, se .
-		
-		 genererar rök jämte varandra, med olika densitet men samma temperatur. Efter en tid
 
 	\Section{Slutord}
 		
@@ -839,7 +831,8 @@ void main()
 			Tidssteg & 0.1 \\ \hline
 			Lyftkraft:  $ \alpha $ & 0,0125 \\ \hline
 			Lyftkraft: $ \beta $ & 1 \\ \hline
-			Rumstemperatur & 0 \\ \hline
+			Värmekällans temperatur vid start: $ T_{amb} $ & 20 \\ \hline
+			Rummets temperatur vid start & 0 \\ \hline
 			Jacobi:  $ \alpha $ & -100 \\ \hline
 			Jacobi: $ \beta $ & 0,1\\ \hline
 		\end{tabular}
