--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -147,7 +147,8 @@ Joakim Deborg \\
 Kristofer Janukiewicz \\
 Marcus Nygren}
 
-\def\graders{Anna Lombardi, Ulf Sannemo}
+\def\graders{Anna Lombardi}
+\def\handler{Ulf Sannemo}
 
 
 % om du vill referera till katalogen där dina filer ligger kan du 
@@ -184,7 +185,10 @@ Marcus Nygren}
 			\large\name \\
 			\vfill
 			\large{\textbf{Handledare}}\\
-			\mbox{\large{\graders}}
+			\mbox{\large{\handler}}\\ \ \\		
+			\large{\textbf{Examninator}}\\
+			\mbox{\large{\graders}} 
+		
 		\end{center}
 	\end{titlepage}
 
