Fixed spelling mistake

--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -186,7 +186,7 @@ Marcus Nygren}
 			\vfill
 			\large{\textbf{Handledare}}\\
 			\mbox{\large{\handler}}\\ \ \\		
-			\large{\textbf{Examninator}}\\
+			\large{\textbf{Examinator}}\\
 			\mbox{\large{\graders}} 
 		
 		\end{center}
